<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pie_chart"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="48dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/home_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pie_chart"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/home_radio_store_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Store name" />

        <RadioButton
            android:id="@+id/home_radio_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Product name" />

        <RadioButton
            android:id="@+id/home_radio_product_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Product type" />

    </RadioGroup>

    <EditText
        android:id="@+id/home_radio_search_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/radio_search_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_radio_group" />

    <EditText
        android:id="@+id/home_radio_search_date_to_txt"
        android:layout_width="180sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_calendar"
        android:drawablePadding="12dp"
        android:ems="10"
        android:focusableInTouchMode="false"
        android:hint="@string/enter_date_to"
        android:inputType="date"
        android:minHeight="48dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/home_radio_search_date_from_txt"
        app:layout_constraintTop_toBottomOf="@+id/home_radio_search_name"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/home_radio_search_date_from_txt"
        android:layout_width="180sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_calendar"
        android:drawablePadding="12dp"
        android:ems="10"
        android:focusableInTouchMode="false"
        android:hint="@string/enter_date_from"
        android:inputType="date"
        android:minHeight="48dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintEnd_toStartOf="@+id/home_radio_search_date_to_txt"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_radio_search_name"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/home_radio_search_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_corner"
        android:text="Analise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_radio_search_date_from_txt" />

    <TextView
        android:id="@+id/currency_tv"
        android:layout_width="180sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_money"
        android:drawablePadding="12dp"
        android:minHeight="30dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="US Dollars"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Current Currency"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_radio_search_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>